Fixes #1546 1 pixel jump on first tab element segment

--- a/src/definitions/collections/menu.less
+++ b/src/definitions/collections/menu.less
@@ -647,6 +647,7 @@
   z-index: 2;
 }
 .ui.tabular.menu ~ .bottom.attached.segment {
+  border-top: none;
   margin: -1px 0px 0px;
 }
 
